Refactor tests: replace deprecated stream methods with modern alternatives and adjust inflection properties for consistency.